Fixed some errors in the classes
